specified memory configuration for JVM and Accumulo so Instamo can run on machines w/ different configs